Adding simple AJAX upload

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,4 +3,5 @@
     <input type="submit">
 </form>
 
+<p><a href="/ajax-upload">Upload via AJAX</a></p>
 <p><a href="/gallery">View uploaded images</a></p>
