--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>File uploads</title>
+    <link rel="stylesheet" type="text/css" src="/assets/css/dropzone.css">
   </head>
   <body>
     {{{ body }}}
